--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/sap-theme.css">
+    <link rel="stylesheet" href="css/styles.css?v=3">
+    <link rel="stylesheet" href="css/sap-theme.css?v=3">
     <!-- <link rel="stylesheet" href="css/home-enhanced.css"> -->
 
 
